<resources>
    <string name="app_name">PDD App</string>

    <!-- Main Screen -->
    <string name="main_title">Основные разделы</string>
    <string name="main_section_1_title">Режим экзамена</string>
    <string name="main_section_2_title">Тренировка по билетам</string>
    <string name="main_section_3_title">Вопросы по темам</string>
    <string name="main_section_1_subtitle">20 случайных вопросов\nза 20 минут</string>
    <string name="main_section_2_subtitle">Решай вопросы в удобном\nпорядке</string>
    <string name="main_section_3_subtitle">Тренируйся по конкретным\n темам</string>
    <string name="main_section_1_button">Начать экзамен</string>
    <string name="main_section_2_button">Выбрать билет</string>
    <string name="main_section_3_button">Выбрать тему</string>
    <string name="main_additional_sections">Дополнительные разделы</string>
    <string name="main_subsection_1_title">ПДД и знаки</string>
    <string name="main_subsection_1_subtitle">Все правила и дорожные\nзнаки</string>
    <string name="main_subsection_1_button">ПДД и знаки</string>
    <string name="main_subsection_2_title">Мои ошибки</string>
    <string name="main_subsection_2_subtitle">Анализируй свои ошибки\nи улучшай результат</string>
    <string name="main_subsection_2_button">Посмотреть\nошибки</string>
    <string name="main_subsection_3_title">Избранные вопросы</string>
    <string name="main_subsection_3_subtitle">Сохрани важные вопросы\nдля повторения</string>
    <string name="main_subsection_3_button">Избранные\nвопросы</string>
    <string name="main_subsection_4_title">Статистика</string>
    <string name="main_subsection_4_button">Перейти</string>

    <!-- Tickets Screen -->
    <string name="tickets_title">Билеты ПДД</string>
    <string name="tickets_all_topics">Все темы</string>
    <string name="tickets_item_number_placeholder">№1</string>
    <string name="tickets_item_progress_placeholder">0 из 20</string>
    <string name="tickets_item_subtitle_placeholder">Вопросов решено</string>
</resources>